Operator>> along with its tests, and text file tests.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,11 @@
         "xutility": "cpp",
         "random": "cpp",
         "format": "cpp",
-        "forward_list": "cpp"
+        "forward_list": "cpp",
+        "charconv": "cpp",
+        "chrono": "cpp",
+        "optional": "cpp",
+        "ratio": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
